--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
+    "sweetalert2": "^11.7.12",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
